@@ -32,10 +32,16 @@ like to copy them somewhere.
 Support for using Glade generated user interfaces is very old and I'd
 rather not encourage folk to create Gtkdialog applications in this way.
 
+ARM
+---
+A problem was encountered when compiling on the ARM platform whereby the
+widgets were being packed in the wrong order and I have applied a fix for
+this wrapped in an #ifdef __arm__ preprocessor macro in automaton.c:2149.
+
 Contacting Us
 =============
 
 http://code.google.com/p/gtkdialog/
 
 
-2011-09-26
+2012-07-24
